[package]
name = "alt_bn128_cdylib"
version = "0.0.1"
edition = "2018"
authors = ["Mohanson <mohanson@outlook.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "alt_bn128"
crate-type = ["cdylib"]

# [profile.release]
# lto = "fat"

[dependencies]
alt_bn128 = { path="../alt_bn128" }
